--- a/src/orc-android/build.gradle
+++ b/src/orc-android/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 19
@@ -33,7 +33,9 @@ android {
 dependencies {
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.google.guava:guava:18.0'
-    compile 'com.microsoft.aad:adal:1.1.7'
+    compile ('com.microsoft.aad:adal:1.14.0'){
+        exclude group: 'com.android.support'
+    }
     compile 'com.microsoft.services.msa:msa-auth:0.8.3'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'org.slf4j:slf4j-api:1.7.12'
